# ZeroLogExtractor

./: README.md  main.py  pyproject.toml
output/: result.csv
utils/: helpers.py
